--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
-    "sass": "^1.69.4",
+    "swiper": "^10.3.1",
     "webfontloader": "^1.6.28",
     "zustand": "^4.4.3"
   },
@@ -26,6 +26,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "sass": "^1.69.4",
     "vite": "^4.4.5"
   }
 }
