--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lines-ellipsis": "^0.15.4",
     "react-loader-spinner": "^5.4.5",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.17.0",
